# wilma-deering

./: .gitignore  404.html  LICENSE  Makefile  README.md  Snakefile  index.html  mkdocs.yml  mtcars.csv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-docker-image.yml  publish-gh-pages.yml
10_rules/: index.html
data/raw/cars/: _readme.md  amc_javelin.json  cadillac_fleetwood.json  camaro_z28.json  chrysler_imperial.json  datsun_710.json  dodge_challenger.json  duster_360.json  ferrari_dino.json  fiat_128.json  fiat_x1-9.json  ford_pantera_l.json  honda_civic.json  hornet_4_drive.json  hornet_sportabout.json  lincoln_continental.json  lotus_europa.json  maserati_bora.json  mazda_rx4.json  mazda_rx4_wag.json  merc_230.json  merc_240d.json  merc_280.json  merc_280c.json  merc_450se.json  merc_450sl.json  merc_450slc.json  pontiac_firebird.json  porsche_914-2.json  toyota_corolla.json  toyota_corona.json  valiant.json  volvo_142e.json
data/refined/cars/: 01_mtcars.csv  02_mtcars_with_manufacturer.csv  (+1 more)
data/wrapped/cars/: mtcars.parquet
demo_notes/: index.html
docs/: 10_rules.md  demo_notes.md  index.md  reproducibility.md
notebooks/: cars.ipynb
references/: references.md
reports/: cars_report.tex
reproducibility/: index.html
src/: __init__.py  config.py
src/my_pkg/: 001_cars_make_interim.py  002_cars_add_manufacturer.py  003_cars_add_hp_wt_ratio.py  004_cars_create_parquet.py  __init__.py  cars_add_manufacturer.py  cli.py
tests/cars/: add_manufacturer_test.py
tests/helpers/: helpers_test.py
(+5 files in other folders)
